config/istio/virtual-service/account-virtual-service.threat1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-route
spec:
  hosts:
    - "skripsi.lakik.software"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            exact: /account
      route:
        - destination:
            host: account-service
            port:
              number: 8081
