config/istio/virtual-service/rogue-vs.threat2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rogue-route
spec:
  hosts:
    - 'skripsi.lakik.software'
  gateways:
    - gateway
  http:
    - match:
        - uri:
            exact: /rogue
      route:
        - destination:
            host: rogue-service
            port:
              number: 8082
